--- a/tcwquotes/index.html
+++ b/tcwquotes/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
     <script type="text/javascript" src="main.js"></script>
+    <link rel="icon" href="clone.png">
   </head>
   <body onload="genQuote()">
     <div class="main">
