--- a/uni/index.html
+++ b/uni/index.html
@@ -22,36 +22,41 @@
   <div class="table">
     <div class="leftRow">
       <div class="headerItem"></div>
+      <div class="leftItem"><p>GANZ-TAG</p></div>
+      <div class="leftItem"><p>8:30-10:00</p></div>
       <div class="leftItem"><p>10:15-11:45</p></div>
       <div class="leftItem"><p>12:15-13:45</p></div>
       <div class="leftItem"><p>14:15-15:45</p></div>
-      <div class="leftItem"><p>16:15-17:45</p></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Montag</p></div>
       <div class="item empty"></div>
+      <div class="item rm"><p class="moduleTime">8:30-10:00</p><p class="moduleTxt">Robotic Manipulators</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC</p></div>
       <div class="item empty"></div>
       <div class="item empty"></div>
       <div class="item empty"></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Dienstag</p></div>
-      <div class="item bv"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Bildverarbeitung</p><p class="subTxt">Vorlesung</p><p class="locationTxt">V2-205</p></div>
-      <div class="item tut ssTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Sound Synthesis</p><p class="subTxt">Tutorium</p><p class="locationTxt">E0-236 & ONLINE</p><p class="locationTxt weekEven">2-WÖCHIG</p></div>
-      <div class="item fl"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Formal Logic</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H11</p></div>
+      <div class="item empty"></div>
+      <div class="item empty"></div>
+      <div class="item empty"></div>
+      <div class="item empty"></div>
       <div class="item empty"></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Mittwoch</p></div>
-      <div class="item clr"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Farbe digitalen Mediengestaltung</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H8 / U2-240</p></div>
       <div class="item empty"></div>
-      <div class="item ss"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Sound Synthesis</p><p class="subTxt">Vorlesung</p><p class="locationTxt">V2-205 & ONLINE</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/92457357757?pwd=NUJWZUFDTUlRK0x2SnNjL1NBWkg1Zz09"><i class="fas fa-video"></i></a></div>
-      <div class="item tut flTut"><p class="moduleTime">16:15-17:45</p><p class="moduleTxt">Formal Logic</p><p class="subTxt">Tutorium</p><p class="locationTxt">U2-147</p></div>
+      <div class="item tut rmTut"><p class="moduleTime">8:30-10:00</p><p class="moduleTxt">Robotic Manipulators</p><p class="subTxt">Tutorium</p><p class="locationTxt">CITEC</p></div>
+      <div class="item empty"></div>
+      <div class="item empty"></div>
+      <div class="item kr"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Kryptografie</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H3</p></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Donnerstag</p></div>
-      <div class="item gm"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Gründungs-management</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H10</p></div>
-      <div class="item tut raTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Mobile Roboter</p><p class="subTxt">Tutorium</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/62769612186?pwd=M2ZYUkN4em9MUTBLanZwWHUxWjk4dz09"><i class="fas fa-video"></i></a></div>
+      <div class="item gm"><p class="moduleTime">VERSCHIEDEN</p><p class="moduleTxt">Gründungsmanagement</p><p class="subTxt">Übung</p><p class="locationTxt">W9-109, 25.05. CITEC, 22.6. extern</p></div>
+      <div class="item empty"></div>
+      <div class="item adi"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Algorithmen der Informatik</p><p class="subTxt">Vorlesung</p><p class="locationTxt">X-E0-002</p></div>
       <div class="item empty"></div>
       <div class="item empty"></div>
     </div>
@@ -59,8 +64,9 @@
       <div class="headerItem"><p>Freitag</p></div>
       <div class="item empty"></div>
       <div class="item empty"></div>
-      <div class="item empty"></div>
-      <div class="item empty"></div>
+      <div class="item tut krTut"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Kryptografie</p><p class="subTxt">Tutorium</p><p class="locationTxt">U2-147</p></div>
+      <div class="item bv"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Deep-Learning</p><p class="subTxt">Seminar</p><p class="locationTxt">V2-213</p></div>
+      <div class="item tut adiTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Algorithmen der Informatik</p><p class="subTxt">Tutorium</p><p class="locationTxt">X-EO-205, 16.06 in C01-142</p></div>
     </div>
   </div>
 
@@ -74,31 +80,30 @@
         <a class="moduleLink" href="https://docs.google.com/spreadsheets/d/1gHT5yleFO7J8022jn4L9Je-N-mDim4P59t-0V5LPmRo/edit#gid=1893177104">Liste (Google-Sheets)</a>
       </div>
       <div class="moduleItem">
-        <p class="moduleTitle">Mobile Roboter</p>
-        <a class="moduleLink techfak" href="https://www.ti.uni-bielefeld.de/html/teaching/WS2223/mobrob/index.html">Ti-Seite</a>
-        <a class="moduleLink techfak" href="https://www.ti.uni-bielefeld.de/downloads/WS2223/mobrob/VIDEOCAPTURE/mr_videos_weekly.html">Videos (login: robotik)</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=14944">Lernraum+</a>
+        <p class="moduleTitle">Angewandte Robotik</p>
+        <a class="moduleLink techfak" href="https://www.ti.uni-bielefeld.de/html/teaching/SS23/angewandte_robotik/index.html">Ti-Seite</a>
       </div>
       <div class="moduleItem">
-        <p class="moduleTitle">Bildverarbeitung</p>
-        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/50090/Start.aspx">Lernraum</a>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=15481">Lernraum+</a>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Farbe in der digitalen Gestaltung</p>
-        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=15190">Lernraum+</a>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Sound Synthesis</p>
-        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/49958/">Lernraum</a>
-      </div>
-      <div class="moduleItem">
-        <p class="moduleTitle">Formal Logic</p>
-        <a class="moduleLink frettie" href="https://www.math.uni-bielefeld.de/~frettloe/teach/logik22.html">Frettlöh's Seite</a>
+        <p class="moduleTitle">Deep-Learning in BV</p>
+        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/54545/Start.aspx">Lernraum</a>
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Gründungsmanagement</p>
         <a class="moduleLink gmanagement" href="https://www.gruendungsmanagement.online/">GM-Online</a>
+      </div>
+      <div class="moduleItem">
+        <p class="moduleTitle">Algorithmen der Informatik</p>
+        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/53397/Start.aspx">Lernraum</a>
+        <a class="moduleLink lrplus" href="https://moodle.uni-bielefeld.de/course/view.php?id=511">Moodle</a>
+      </div>
+      <div class="moduleItem">
+        <p class="moduleTitle">Robotic Manipulators</p>
+        <a class="moduleLink lrplus" href="https://moodle.uni-bielefeld.de/course/view.php?id=537">Moodle</a>
+      </div>
+      <div class="moduleItem">
+        <p class="moduleTitle">Kryptografie</p>
+        <a class="moduleLink frettie" href="https://www.math.uni-bielefeld.de/~frettloe/teach/krypto23.html">Frettlöh's Seite</a>
+        <a class="moduleLink else" href="https://cocalc.com/static/app.html?target=%2Fprojects">Cocalc</a>
       </div>
     </div>
 
