--- a/uni/index.html
+++ b/uni/index.html
@@ -2,7 +2,7 @@
 <html lang="de" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>SoSe 2022 Links</title>
+  <title>¯\_(ツ)_/¯</title>
   <link rel="shortcut icon" href="icon.png">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -77,6 +77,7 @@
       <div class="moduleItem">
         <p class="moduleTitle">Allgemein</p>
         <a class="moduleLink" href="https://ekvv.uni-bielefeld.de/kvv_publ/publ/benvw_Login_MatrikelAct">eKVV</a>
+        <a class="moduleLink" href="https://de.overleaf.com/project">Overleaf</a>
         <a class="moduleLink" href="https://docs.google.com/spreadsheets/d/1gHT5yleFO7J8022jn4L9Je-N-mDim4P59t-0V5LPmRo/edit#gid=1893177104">Liste (Google-Sheets)</a>
       </div>
       <div class="moduleItem">
@@ -95,6 +96,7 @@
         <p class="moduleTitle">Algorithmen der Informatik</p>
         <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/53397/Start.aspx">Lernraum</a>
         <a class="moduleLink lrplus" href="https://moodle.uni-bielefeld.de/course/view.php?id=511">Moodle</a>
+        <a class="moduleLink video" href="https://uni-bielefeld.cloud.panopto.eu/Panopto/Pages/Sessions/List.aspx#folderID=%2227679cd9-2a9c-4516-bff3-afdc00b2c156%22">Panopto</a>
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Robotic Manipulators</p>
@@ -104,6 +106,7 @@
         <p class="moduleTitle">Kryptografie</p>
         <a class="moduleLink frettie" href="https://www.math.uni-bielefeld.de/~frettloe/teach/krypto23.html">Frettlöh's Seite</a>
         <a class="moduleLink else" href="https://cocalc.com/static/app.html?target=%2Fprojects">Cocalc</a>
+        <a class="moduleLink sagecell" href="https://sagecell.sagemath.org/">SageCell</a>
       </div>
     </div>
 
