--- a/index.html
+++ b/index.html
@@ -29,39 +29,39 @@
             <img class="pixelArt" id="pixelArt0" src="https://raw.githubusercontent.com/n0j0games/pixelart/main/heroesVillains.png" alt="">
             <div id="arrowLeftDiv">
                 <img id="arrowLeft" src="images/arrow1.png" alt="">
-                <p class="midText" id="arrowLeftText">Look at my PixelArt</p>
+                <p class="midText" id="arrowLeftText">Look at my pixelarT</p>
             </div>
         </div>
         <div id="midContent">
-            <p id="title">Hello There!</p>
-            <p id="subtitle">Check out my <a href="https://releasr.netlify.app">Spotify Release Tracker</a>!</p>
+            <p id="title">Hello therE!</p>
+            <!--<p id="subtitle">Check out my <a href="https://releasr.netlify.app">Spotify Release Tracker</a>!</p>-->
         </div>
         <div id="pixelArtMobile" onclick="redirect('https://n0j0.artstation.com/')">
             <img id="pixelArtSmall" src="https://raw.githubusercontent.com/n0j0games/pixelart/main/graduation_small.gif" alt="">
-            <p class="midText" id="smallText">Look at my PixelArt</p>
+            <p class="midText" id="smallText">Look at my pixelarT</p>
         </div>
         <div id="rightContent">
-            <p class="midText">My Projects</p>
-            <div class="link">
-                <a href="https://crawlspotify.netlify.app/">Spotify Discography Crawler (WIP)</a>
+            <p class="midText">My projectS</p>
+            <!--<div class="link">
+                <a href="https://crawlspotify.netlify.app/">Spotify discography crawleR (WIP)</a>
                 <img src="https://pbs.twimg.com/profile_images/1329089107952209922/PInQ39Xq_400x400.jpg" alt="">
-            </div>
+            </div>-->
             <div class="link">
-                <a href="https://releasr.netlify.app/">releasr - Spotify Release Tracker</a>
+                <a href="https://releasr.netlify.app/">Spotify release trackeR</a>
                 <img src="https://releasr.netlify.app/images/favicon.png" alt="">
             </div>
             <div class="link">
-                <a href="../palettebin">Palettebin (Color Palette Library & Generator)</a>
+                <a href="../palettebin">PalettebiN</a>
                 <img src="../palettebin/iconMulticolor.png" alt="">
             </div>
-            <div class="link">
+            <!--<div class="link">
                 <a href="../minitxt">minitxt</a>
                 <img src="../minitxt/images/logo.png" alt="">
             </div>
             <div class="link">
                 <a href="../tcwquotes">The Clone Wars Quote Generator</a>
                 <img src="../tcwquotes/clone.png" alt="">
-            </div>
+            </div>-->
             <!--<div class="link" id="lastLink">
                 View all my projects on <i class="fa-brands fa-github"></i>
                 <a href="https://github.com/n0j0games">GitHub @n0j0games</a>
