add new REST frontend

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
         <div id="spotifySub">
             <div id="vinyl">
                 <img src="images/vinyl.png" alt="">
-                <img id="spotifyImgSmall" src="https://m.media-amazon.com/images/I/813XseYNw1L._SY355_.jpg" alt="">
+                <!--<img id="spotifyImgSmall" src="https://m.media-amazon.com/images/I/813XseYNw1L._SY355_.jpg" alt="">-->
+                <div id="spotifyDivSmall"></div>
             </div>
             <img id="spotifyImg" src="https://m.media-amazon.com/images/I/813XseYNw1L._SY355_.jpg" alt="">
             <div id="spotifyRight">
