--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
             </div>
         </div>
         <div id="midContent">
+            <img id="char" src="images/char.png" alt="">
             <p id="title">Hello therE!</p>
-            <!--<p id="subtitle">Check out my <a href="https://releasr.netlify.app">Spotify Release Tracker</a>!</p>-->
+            <p id="subtitle">I'm Noah and I code stuff & do pixel art</p>
         </div>
         <div id="pixelArtMobile" onclick="redirect('https://n0j0.artstation.com/')">
             <img id="pixelArtSmall" src="https://raw.githubusercontent.com/n0j0games/pixelart/main/graduation_small.gif" alt="">
@@ -83,18 +84,20 @@
         </div>-->
     </div>
     <div id="spotify" class="subClass">
-        <p class="midText" id="spotifyListeningTo">I'm currently listening to</p>
+        <p class="midSpotify" id="spotifyListeningTo">I'm currently listening to</p>
         <div id="spotifySub">
-            <div id="vinyl">
-                <img src="images/vinyl.png" alt="">
-                <!--<img id="spotifyImgSmall" src="https://m.media-amazon.com/images/I/813XseYNw1L._SY355_.jpg" alt="">-->
-                <div id="spotifyDivSmall"></div>
-            </div>
-            <img id="spotifyImg" src="https://m.media-amazon.com/images/I/813XseYNw1L._SY355_.jpg" alt="">
+            <div id="spotifyImgDiv">
+                <img id="spotifyImg" src="https://m.media-amazon.com/images/I/813XseYNw1L._SY355_.jpg" alt="">
+                <div id="vinyl">
+                    <img src="../images/vinyl.png" alt="">
+                    <!--<img id="spotifyImgSmall" src="https://m.media-amazon.com/images/I/813XseYNw1L._SY355_.jpg" alt="">-->
+                    <div id="spotifyDivSmall"></div>
+                </div>
+            </div>                                
             <div id="spotifyRight">
                 <p id="spotifyArtist">The Weekend</p>
                 <a href="" id="spotifyAlbum">After Hours</a>
-                <p id="spotifyTitle" class="midText">on After Hours</p>
+                <p id="spotifyTitle" class="midSpotify">on After Hours</p>
             </div>
         </div>
     </div>
