--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
         <div id="midContent">
             <img id="char" src="images/char.png" alt="">
             <p id="title">Hello therE!</p>
-            <p id="subtitle">I'm Noah and I code stuff & do pixel art</p>
+            <p id="subtitle">I'm noah and i code stuff & do pixel arT</p>
+            <div id="socials">
+                <a href="https://open.spotify.com/user/d1g69g8d4ni9ype7dhfyazy22?si=5490f1a2c00b4444"><img src="images/socials/icon0.png" alt=""></a>
+                <a href="https://twitter.com/pixelingnoah"><img src="images/socials/icon1.png" alt=""></a>
+                <a href="https://github.com/n0j0games"><img src="images/socials/icon2.png" alt=""></a>
+                <a href="https://https://discord.com/users/227504919140106240"><img src="images/socials/icon3.png" alt=""></a>
+            </div>
         </div>
         <div id="pixelArtMobile" onclick="redirect('https://n0j0.artstation.com/')">
             <img id="pixelArtSmall" src="https://raw.githubusercontent.com/n0j0games/pixelart/main/graduation_small.gif" alt="">
