--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="https://open.spotify.com/user/d1g69g8d4ni9ype7dhfyazy22?si=5490f1a2c00b4444"><img src="images/socials/icon0.png" alt=""></a>
                 <a href="https://twitter.com/pixelingnoah"><img src="images/socials/icon1.png" alt=""></a>
                 <a href="https://github.com/n0j0games"><img src="images/socials/icon2.png" alt=""></a>
-                <a href="https://https://discord.com/users/227504919140106240"><img src="images/socials/icon3.png" alt=""></a>
+                <a href="https://discord.com/users/227504919140106240"><img src="images/socials/icon3.png" alt=""></a>
             </div>
         </div>
         <div id="pixelArtMobile" onclick="redirect('https://n0j0.artstation.com/')">
