several style changes

--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
 <body onload="load()">
 
     <div id="scene" data-relative-input="true">
-        <!--<img src="https://noahschuette.github.io/error/space0.png" data-depth='1' class="paramimg" id="img-0"/>
-        <img src="https://noahschuette.github.io/error/space1.png" data-depth='0.7' class="paramimg" id="img-1"/>-->
-        <img src="https://noahschuette.github.io/error/space2.png" data-depth='0.3' class="paramimg" id="img-2"/>
-        <img src="https://noahschuette.github.io/error/space3.png" data-depth='0.1' class="paramimg" id="img-3"/>
-        <img src="https://noahschuette.github.io/error/space4.png" data-depth='0.05' class="paramimg" id="img-4"/>
+        <img src="error/space2.png" data-depth='0.3' class="paramimg" id="img-2"/>
+        <img src="error/space3.png" data-depth='0.1' class="paramimg" id="img-3"/>
+        <img src="error/space4.png" data-depth='0.05' class="paramimg" id="img-4"/>
+        <img src="error/mobile/space2.png" data-depth='0.3' class="paramimg" id="img-2-mobile"/>
+        <img src="error/mobile/space3.png" data-depth='0.1' class="paramimg" id="img-3-mobile"/>
+        <img src="error/mobile/space4.png" data-depth='0.05' class="paramimg" id="img-4-mobile"/>
     </div>
     
     <div id="mainContent">
@@ -43,7 +44,7 @@
             </div>
         </div>
         <div id="midContent">
-            <img id="char" src="images/char.png" alt="">
+            <img id="char" src="images/emotes/state_uwu.png" alt="">
             <p id="title">Hello therE!</p>
             <p id="subtitle">I'm noah and i code stuff & do pixel arT</p>
             <div id="socials">
@@ -59,10 +60,6 @@
         </div>
         <div id="rightContent">
             <p class="midText">My projectS</p>
-            <!--<div class="link">
-                <a href="https://crawlspotify.netlify.app/">Spotify discography crawleR (WIP)</a>
-                <img src="https://pbs.twimg.com/profile_images/1329089107952209922/PInQ39Xq_400x400.jpg" alt="">
-            </div>-->
             <div class="link">
                 <a href="https://releasr.netlify.app/">Spotify release trackeR</a>
                 <img src="https://releasr.netlify.app/images/favicon.png" alt="">
@@ -71,18 +68,6 @@
                 <a href="../palettebin">PalettebiN</a>
                 <img src="../palettebin/iconMulticolor.png" alt="">
             </div>
-            <!--<div class="link">
-                <a href="../minitxt">minitxt</a>
-                <img src="../minitxt/images/logo.png" alt="">
-            </div>
-            <div class="link">
-                <a href="../tcwquotes">The Clone Wars Quote Generator</a>
-                <img src="../tcwquotes/clone.png" alt="">
-            </div>-->
-            <!--<div class="link" id="lastLink">
-                View all my projects on <i class="fa-brands fa-github"></i>
-                <a href="https://github.com/n0j0games">GitHub @n0j0games</a>
-            </div>-->
         </div>
         <!--<div id="rightContent" onclick="redirect('projects')">
             <img id="arrowRight" src="images/arrow2.png" alt="">
