--- a/palettebin/index.html
+++ b/palettebin/index.html
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Palettebin - noahschuette</title>
-    <link rel="shortcut icon" href="iconNewRound.png">
+    <title>PasteYourPalette</title>
+    <link rel="shortcut icon" href="pasteyourpalette.png">
     <meta name="description" content="View and create color palettes that can be viewed through a simple link. Palettes can be created by hand or via a custom generator. There is also a library with a lot of good palettes you can use.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -29,14 +29,14 @@
   <body onload="setPalette()">
     <!--<p class="title" onclick="reset()"><span id="x1">P</span><span id="x2">a</span><span id="x3">l</span><span id="x4">e</span><span id="x5">t</span><span id="x6">t</span><span id="x7">E</span>bin</p>-->
     <div class="titlediv">
-      <p class="title" onclick="reset()"><img class="titleIcon" src="iconNewRound.png" alt="">Palettebin</p>
+      <p class="title" onclick="reset()"><img class="titleIcon" src="pasteyourpalette.png" alt="">Paste<a class="subtitle">your</a>palette</p>
       <a href="library.html" class="library"><i class="fas fa-stream"></i>DISCOVER PALETTES</a>
       <a href="#" onclick="openGenerator()" class="library"><i class="fas fa-cog"></i>PALETTE GENERATOR</a>
       <!---->
     </div>
 
     <section class="fullscreen">
-      <p class="mobiletitle" onclick="reset()">Palettebin</p>
+      <p class="mobiletitle" onclick="reset()"><img class="titleIcon" src="pasteyourpalette.png" alt="">Paste<a class="subtitle">your</a>palette</p>
       <div class="gen" id="gen"><!--
         <div class="slidersub">
           <p class="slidertxt">HUE</p>
@@ -76,9 +76,9 @@
         <p class="colorBtn" id="colorDel">REMOVE</p>-->
       </div>
     </section>
-    <div class="copyright" style="position: fixed; right: 30px; bottom: 30px;">
-      <a href="https://noahschuette.de" id="n0j0logo"><script onload="replaceLogo('n0j0logo','#8b9bb4')" src="https://noahschuette.github.io/scripts/essentials.js"></script></a>
-      <p style="color: #8b9bb4; font-weight: 700; font-size: 15px;">&copy; 2021</p>
-    </div>
+    <!--<div class="copyright" style="position: fixed; right: 30px; bottom: 30px;">
+      <a href="../index.html" id="n0j0logo"><script onload="replaceLogo('n0j0logo','#8b9bb4')" src="https://noahschuette.github.io/scripts/essentials.js"></script></a>
+      <p style="color: #8b9bb4; font-weight: 700; font-size: 15px;">&copy; 2023</p>
+    </div>-->
   </body>
 </html>
