--- a/palettebin/library.html
+++ b/palettebin/library.html
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Palettebin Library - noahschuette</title>
-    <link rel="shortcut icon" href="iconNewRound.png">
+    <title>PasteYourPalette Library</title>
+    <link rel="shortcut icon" href="pasteyourpalette.png">
     <meta name="description" content="View and create color palettes that can be viewed through a simple link. Palettes can be created by hand or via a custom generator. There is also a library with a lot of good palettes you can use.">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
   </head>
   <body onload="setLibrary()">
     <div class="titlediv">
-      <a href="index.html" class="title"><img class="titleIcon" src="iconNewRound.png" alt="">Palettebin <span id="libSubtitle">LIBRARY</span></a>
+      <a href="index.html" class="title"><img class="titleIcon" src="pasteyourpalette.png" alt="">Paste<span class="subtitle">your</span>palette</a>
     </div>
     <section id="library">
       <a href="#" class="libEntry">
